<resources>
    <string name="app_name">InHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_recipes">Recipes</string>
    <string name="dialog_title">Ingredients</string>
    <string name="dialog_text">Hallo</string>

    <string name="product_name">Hallo</string>
    <string name="amount">Amount in grams</string>


    <string name="single_recipe_title">Test</string>
    <string name="single_recipe_text">Test text</string>
    <string name="single_recipe_summary_title">Summary</string>
    <string name="single_recipe_instructions_title">Instructions</string>

    <string name="add_item_dialog">Add a product that you have in your pantry.</string>


    <string-array name="ingredients_array">
        <item>Apple</item>
        <item>Chicken</item>
        <item>Brocolli</item>
        <item>Onion</item>
        <item>Garlic</item>
        <item>Minced Meat</item>
    </string-array>

    <string name="time_to_make">Time to Make</string>
    <string name="used_ingredients_title">Available Ingredients</string>
    <string name="missing_ingredients_title">Missing Ingredients</string>
</resources>
