<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/RecipeDetailLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/RecipeDetailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/ic_home_black_24dp" />

            <TextView
                android:id="@+id/RecipeDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_recipe_title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeDetailIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/single_recipe_text"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/RecipeDetailIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_recipe_text"
                android:textColor="@color/colorTextGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/time_to_make"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recipeDetailTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_recipe_text"
                android:textColor="@color/colorTextGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recipeDetailSummaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/single_recipe_summary_title"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recipeDetailSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_recipe_text"
                android:textColor="@color/colorTextGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recipeDetailInstructionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/single_recipe_instructions_title"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recipeDetailInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_recipe_text"
                android:textColor="@color/colorTextGrey"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>

